grails-app/assets/stylesheets/elurikkus-common.css
/* ... */
.erk-icon-button__icon--after {
    margin-left: .4em;
}

.erk-icon-button__icon--before {
    margin-right: .6em;
}

.erk-text {
    font-size: 16px;
}

body {
    margin: 20px;
}

@media(max-width: 450px) {
    body {
        margin: 10px;
    }
}

.page-content-wrapper {
    margin: auto;
    clear: both;
}

.split {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.header {
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -ms-flex-pack: justify;
    justify-content: space-between;
    clear: both;
}

.header--center {
    margin: auto auto 0 auto;
}

.logo {
    width: 140px;
    height: 100%;
    vertical-align: middle;
}

.menu {
    padding-right: 20px;
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;
    -ms-flex: 1;
    flex: 1;
    text-align: right;
    display: none;
}

@media(min-width: 1050px) {
    .menu {
        display: block;
    }
}

.submenu {
    display: inline-block;
    text-align: left;
    position: relative;
    font-size: 14px;
    padding: 0 10px 0 10px;
    color: #666;
}

.submenu__title {
    padding: 0;
    font-weight: bold;
}

.submenu__title--language {
    text-transform: initial;
}

.submenu__title--light {
    color: #fff;
    text-shadow: 0px 0px 2px rgba(0, 0, 0, .75);
}

.submenu__title-link {
    color: inherit;
    cursor: auto;
}

.submenu__title-link:hover {
    color: inherit;
    text-decoration: none;
}

.submenu__title-link--disabled {
    color: #cacbcc !important;
    cursor: not-allowed;
}

.submenu__title-link--disabled:hover {
    color: #8b8d8e !important;
}

.submenu__title-addon {
    font-size: .5rem;
}

.submenu__dropdown {
    position: absolute;
    z-index: 1100;
    left: 50%;
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    margin-top: 10px;
    white-space: nowrap;
    border: 1px solid #8d8d8d;
    display: none;
}

.submenu__dropdown:after {
    content: ' ';
    position: absolute;
    width: 100%;
    height: 15px;
    bottom: 100%;
}

.submenu__dropdown-pointer {
    position: absolute;
    width: 0;
    height: 0;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-bottom: 10px solid #8d8d8d;
    left: 50%;
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    top: -10px;
}

.submenu__dropdown-pointer-fill {
    position: absolute;
    width: 0;
    height: 0;
    border-left: 9px solid transparent;
    border-right: 9px solid transparent;
    border-bottom: 9px solid #fff;
    left: 50%;
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    top: -9px;
}

.submenu__dropdown-content {
    margin-top: 0px;
    background-color: #fff;
    padding: 10px;
}

.submenu__dropdown-link {
    display: block;
    color: #3a3e42;
}

.submenu__dropdown-link:hover {
    color: #3dc8d3;
    text-decoration: none;
}

.submenu:hover .submenu__dropdown {
    display: inline-block;
}

.burger {
    position: absolute;
    top: 1rem;
    right: 1rem;
    text-align: right;
}

@media(min-width: 1050px) {
    .burger {
        display: none;
    }
}

@media(max-width: 450px) {
    .burger {
        top: 10px;
        right: 10px;
    }
}

.burger__popup {
    text-align: left;
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    overflow-y: auto;
    z-index: 1100;
    border: 1px solid #8d8d8d;
    background-color: #fff;
}

.burger__popup--open {
    display: inherit;
}

@media(max-width: 450px) {
    .burger__popup {
        height: 100%;
        width: 100%;
    }
}

.burger__popup-content {
    padding: 1.5rem;
}

.burger__submenu {
    padding-bottom: 1em;
}

.burger__submenu-title {
    font-weight: bold;
}

.burger__link {
    color: inherit;
}

.burger__link:hover {
    color: #3dc8d3;
    text-decoration: none;
}

.burger__close-button {
    position: absolute;
    top: 0.5rem;
    right: 1rem;
    height: 2rem;
    line-height: 1rem;
    font-size: 2rem;
    padding: 0 4px;
    background: none;
    border: none;
    cursor: pointer;
}

.burger__open-button {
    height: 2rem;
    line-height: 2rem;
    border: 0;
    padding: 0;
    background-color: transparent;
    cursor: pointer;
}

.burger__open-button--light {
    color: #fff;
    text-shadow: 0px 0px 2px rgba(0, 0, 0, .75);
}

.burger__open-button-icon {
    font-size: 2rem;
    font-family: sans-serif;
    padding: 0 4px;
}

.language {
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;
    -ms-flex: 0 0;
    flex: 0 0;
    white-space: nowrap;
    display: none;
}

.language .active {
    text-decoration: underline;
}

@media(min-width: 1050px) {
    .language {
        display: inherit;
    }
}

.language > ul {
    margin: 0;
}

.language > ul > li {
    display: inline-block;
}

section {
    margin-bottom: 3rem;
}

.input-plus {
    display: -ms-flexbox;
    display: flex;
    max-width: 22rem;
}

.input-plus__field {
    -ms-flex: 1;
    flex: 1;
}

.footer {
    display: -ms-flexbox;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    max-width: 900px;
    padding-bottom: 2.79167rem;
    padding-top: 380px;
}

@media(max-width: 598.5px) {
    .footer {
        padding: 190px 0 0 0;
    }
}

.footer-licence {
    -ms-flex: 1;
    flex: 1;
}

.footer-licence__logo {
    margin: .25rem .25rem 0 0;
    float: left;
    height: 2rem;
}

.footer-licence__text {
    font-size: 13px;
    color: #3a3e42;
}

.footer-logos {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -.5rem;
}

@media(max-width: 598.5px) {
    .footer-logos {
        -ms-flex: 0;
        flex: 0;
    }
}

.footer-logos__logo {
    display: inline-block;
    margin: .25rem .5rem .5rem .5rem;
    height: 2rem;
}

.footer-logos__logo img {
    height: 100%;
}
/* ... */

